[tool.poetry]
name = "hyperhdr-py-sickkick"
version = "0.2.0"
description = "HyperHDR Ambient Lighting Python Package"
authors = ["sickkick <sickkick40@gmail.com>"]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Home Automation",
]
keywords = [
    "hyperhdr",
    "ambient-lighting",
    "led",
    "hdr",
]
license = "MIT"
repository = "https://github.com/sickkick/hyperhdr-py"
include = ["hyperhdr/py.typed", "LICENSE"]
readme = "README.md"
packages = [
    { include = "hyperhdr" },
]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = { version = "^3.9", optional = true }
Pillow = { version = "^10.0", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^4.0.0"
pytest-aiohttp = "^1.0.0"
pytest-timeout = "^2.2.0"
coverage = "^7.0"
pytest-asyncio = "^0.23.0"

[tool.poetry.extras]
stream = ["aiohttp"]
stream-jpeg = ["aiohttp", "Pillow"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
# https://github.com/PyCQA/isort/wiki/isort-Settings
profile = "black"
# will group `import x` and `from x import` of the same module.
force_sort_within_sections = true
known_first_party = [
    "hyperhdr",
    "tests",
]
forced_separate = [
    "tests",
]
combine_as_imports = true
default_section = "THIRDPARTY"


[tool.pytest.ini_options]
addopts = "-qq --timeout=9 --cov=hyperhdr"
console_output_style = "count"
testpaths = [
  "tests",
]
markers = [
  "asyncio",
]
[tool.coverage.run]
branch = false

[tool.coverage.report]
show_missing = true
fail_under = 95
